--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 
+
+
+
 body{background-color: #34495e;
 font-family: Arial, sans-serif;
 
@@ -18,7 +21,7 @@ font-family: Arial, sans-serif;
     height:100vh;
 }
 
-.space1{
+.space1{  
     grid-area: s1;
 
 }
@@ -33,7 +36,7 @@ font-family: Arial, sans-serif;
     
 }
 
-.logo-and-buttens {
+.logo-and-buttons {
     display: flex;
     align-items: center;
     gap: 10px;
@@ -44,6 +47,10 @@ font-family: Arial, sans-serif;
     font-weight: bold;
 }
 
+.logo-img{
+    width: 350px;
+    height: auto;
+}
 nav{
     display: flex;
     padding-right: 10px;
@@ -59,8 +66,20 @@ nav{
     cursor: pointer;
     
 }
-.space2{
-    grid-area: s;
+
+.foto{
+    width: 100%;
+    height: 30%;
+    display: block;
+}
+.banner-text{
+    position: absolute;
+    color: aliceblue;
+    font-size: 1.6rem;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    top: 50%;
+    left: 69%;
 }
 
 .slideshow {
@@ -79,6 +98,10 @@ nav{
     width: 100%;
 }
 
+.foto{
+    height: 100%;
+    width: 
+}
 
 .text{
     grid-area: tt;
@@ -86,56 +109,6 @@ nav{
     text-align: center;
     color: black;
     padding: 10px;
-}
-
-.numbertext{
-
-position: absolute;
-top: 10px;
-left: 10px;
-color: white;
-background-color: rgb(0, 0, 0, 0.5);
-padding: 5px 10px;
-border-radius: 5px;
-    
-} 
-.prev, .next {
-    position: absolute;
-    top: 50%;
-    transform: translatey(-50% );
-    padding: 10px;
-    font-size: 18px ;
-    color: wheat;
-    font-weight: bold;
-    background-color:(0, 0, 0, 0.5);
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.prev{
-    left: 10px;
-}
-
-.next{
-    right: 10px;
-}
-
-.dot {
-width: 15px;
-height: 15px;   
-background-color: rgba(255, 255, 255, 0.5);
-border-radius: 50%; 
-display: inline-block;
-cursor: pointer;
-}
-
-.dot.active{
-background-color: white;
-}
-
-.space3{
-    grid-area: s3;
-    
 }
 
 .grid {
@@ -146,20 +119,4 @@ background-color: white;
     gap:20px;
     padding: 20px;
     flex-grow: 1;
-}
-
-.box{
-background-color: #2c3e50;
-border-radius: 8px;
-padding: 20px;
-text-align: center;
-font-size: 19px;
-flex: 1 1 calc(30% - 20px);
-max-width: calc(30% - 20px);
-
-.box:hover {
-    background-color: white
-}
-
-
 }
