--- a/css/style2.css
+++ b/css/style2.css
@@ -76,13 +76,18 @@ background-color: #34495e;
     transition:transform 0.6s ease;
     background-color: white;
 }
-.Card: hover{
+.Card hover{
     transform: translateY(-20px)
 }
 .card img {
-    width: 100%;
+    width: 50px;
     height: auto;
     object-fit: cover;
+}
+
+.foto{
+    width: 340px;
+    height: 300px; 
 }
 
 .card-content{
